<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="yuri.kl.com.ua.calculator_one.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorVeryLightGrey"
                    android:text="@string/approximate"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp"
                    android:fontFamily="monospace"/>

                <TextView
                    android:id="@+id/resultField"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorVeryLightGrey"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp"
                    android:fontFamily="monospace"/>
            </LinearLayout>

            <EditText
                android:id="@+id/numberField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="viewEnd"
                android:textSize="60sp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:hint="0"
                android:maxLines="2"
                android:maxLength="24"
                android:ems="24"
                android:fontFamily="monospace"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:background="@drawable/background_view_edit"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal">
            <TableLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonMul"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/multiply"
                        android:textColor="@color/colorBlue"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onOperationClick"/>

                    <Button
                        android:id="@+id/buttonDiv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/division"
                        android:textColor="@color/colorBlue"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onOperationClick"/>

                    <Button
                        android:id="@+id/buttonSub"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/minus"
                        android:textColor="@color/colorBlue"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onOperationClick"/>

                    <Button
                        android:id="@+id/buttonAdd"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/plus"
                        android:textColor="@color/colorBlue"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onOperationClick"/>
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button7"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/seven"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/button8"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/eight"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/button9"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/nine"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/button_square"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/in_the_square"
                        android:textColor="@color/colorBlue"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:background="@drawable/empty_item"/>
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button4"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/four"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/button5"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/five"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/button6"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/six"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/button_cubed"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/square_root"
                        android:textColor="@color/colorBlue"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:background="@drawable/empty_item"/>
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/one"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/button2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/two"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/button3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/three"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/precent"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/percent"
                        android:textColor="@color/colorBlue"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:background="@drawable/empty_item"/>
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/buttonC"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/cancel"
                        android:textColor="@color/colorDeepOrange"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onClear"/>

                    <Button
                        android:id="@+id/button0"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/zero"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/button_border"
                        android:onClick="onNumberClick"/>

                    <Button
                        android:id="@+id/buttonDot"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/dot"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:background="@drawable/empty_item"/>

                    <Button
                        android:id="@+id/buttonEql"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:text="@string/equally"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp"
                        android:background="@color/colorBlue"
                        android:onClick="onResult"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>